	text now has the ellipsis on the left.
	Keyboard search now uses the sort column as the column to
	start searching in.
	Improved branch drawing.

- QLocale [new]
	This new tool class converts between numbers and their string
	representations in various languages.

- QMacStyle
	Allow disabling of size constraints.

- QMovie
	Added JNG support.

- QPixmap
	Support full alpha-maps for paletted (8-bit) images.
	Support 16-bit grayscale PNG images with transparency.

- QPushButton
	A push button with both an iconset and text left-aligns the
	text.

- QSocketDevice
	Added setProtocol() and protocol() for IPv6 support.

- QSound
	Windows: Support loop related APIs.

- QSplashScreen
	Less intrusive stay-on-top policy.

- QSql
	Support for Interbase and SQLite.

- QStatusBar
	Draw messages with the foreground() color of the palette,
	rather than with the text() color.

- QString
	Added support for %lc and %ls to sprintf(). %lc takes a
	Unicode character of type ushort, %ls takes a zero-terminated
	array of Unicode characters of type ushort (i.e. const
	ushort*). Also added support for precision (e.g. "%.5s").
	Changed arg() to support "%L1" for localized conversions.

- QStyle
	Add a new primitive element: PE_RubberBand.

- QTextEdit
	Reduced memory consumption by 20 bytes per line.
	Added a getter for the currently set QSyntaxHighlighter.

- QVariant
	Comparison between variants where one of the variants is a
	numeric value will compare on the numeric value. Type casting
	between different variants is more consistent.

- QWidget
	Added setWindowOpacity() and windowOpacity() to support
	transparent top-level widgets on Windows and Mac.
	Added windowState() and setWindowState() to allow individual
	setting of the minimized/maximized/fullscreen properties.

- QWindowsStyle
	Qt supports toggling of the accelerator underlines using the
	Alt-key on Windows 98, 2000 and later. On other platforms this
	change has no effect.